# oneMath

./: .buildinfo  CMakeLists.txt  README.md  building_and_running_tests.html  building_the_project_with_adaptivecpp.html  building_the_project_with_dpcpp.html  create_new_backend.html  genindex.html  index.html  introduction.html  objects.inv  search.html  searchindex.js  using_onemath_with_cmake.html
.github/workflows/: pr.yml
_sources/: building_the_project_with_adaptivecpp.rst
cmake/: FindARMPL.cmake
cmake/mkl/: MKLConfig.cmake
docs/: building_the_project_with_dpcpp.rst  using_onemath_with_cmake.rst
docs/domains/: sparse_linear_algebra.rst
domains/: sparse_linear_algebra.html
examples/blas/compile_time_dispatching/level3/: CMakeLists.txt
examples/blas/run_time_dispatching/level3/: CMakeLists.txt
examples/dft/compile_time_dispatching/: CMakeLists.txt
examples/dft/run_time_dispatching/: CMakeLists.txt
examples/lapack/compile_time_dispatching/: CMakeLists.txt
examples/lapack/run_time_dispatching/: CMakeLists.txt
examples/rng/: CMakeLists.txt
examples/rng/compile_time_dispatching/: CMakeLists.txt
examples/rng/device/: CMakeLists.txt
examples/rng/run_time_dispatching/: CMakeLists.txt
examples/sparse_blas/compile_time_dispatching/: CMakeLists.txt  sparse_blas_spmv_usm_mklcpu_cusparse.cpp
examples/sparse_blas/run_time_dispatching/: CMakeLists.txt  sparse_blas_spmv_usm.cpp
include/oneapi/math/: blas.hpp  blas.hxx  sparse_blas.hpp
include/oneapi/math/detail/: backend_selector_predicates.hpp  backends.hpp  backends_table.hpp  get_device_id.hpp
include/oneapi/math/rng/: engines.hpp
include/oneapi/mkl/detail/: backends_table.hpp  get_device_id.hpp
include/oneapi/mkl/sparse_blas/: matrix_view.hpp
src/: CMakeLists.txt  config.hpp.in
src/blas/: blas_loader.cpp  function_table.hpp
src/blas/backends/: CMakeLists.txt
src/blas/backends/armpl/: CMakeLists.txt  armpl_batch.cpp  armpl_batch.cxx  armpl_common.hpp  armpl_extensions.cpp  armpl_extensions.cxx  armpl_level1.cpp  armpl_level1.cxx  armpl_level2.cpp  armpl_level2.cxx  armpl_level3.cpp  armpl_level3.cxx  armpl_wrappers.cpp
src/blas/backends/cublas/: CMakeLists.txt  cublas_batch.cpp  cublas_handle.hpp  cublas_helper.hpp  cublas_level1.cpp  cublas_level2.cpp  cublas_level3.cpp  cublas_scope_handle.cpp  cublas_scope_handle.hpp  cublas_scope_handle_hipsycl.cpp  cublas_scope_handle_hipsycl.hpp  cublas_task.hpp
src/blas/backends/generic/: CMakeLists.txt  generic_batch.cpp  generic_batch.cxx  generic_common.hpp  generic_level1.cxx  generic_level1_float.cpp  generic_level2.cxx  generic_level2_float.cpp  generic_level3.cxx  generic_level3_bfloat16.cpp  generic_level3_double.cpp  generic_level3_float.cpp
src/blas/backends/mkl_common/: mkl_blas_backend.hpp  mkl_level1.cxx
src/blas/backends/mklcpu/: CMakeLists.txt
src/blas/backends/mklgpu/: CMakeLists.txt
src/blas/backends/netlib/: CMakeLists.txt  netlib_level1.cxx
src/blas/backends/portblas/: portblas_common.hpp  portblas_level1_double.cpp  portblas_level2_double.cpp  portblas_level3_half.cpp  portblas_wrappers.cpp
src/blas/backends/rocblas/: CMakeLists.txt  rocblas_batch.cpp  rocblas_helper.hpp  rocblas_level1.cpp  rocblas_level2.cpp  rocblas_level3.cpp  rocblas_scope_handle.cpp  rocblas_scope_handle.hpp  rocblas_task.hpp
src/dft/backends/cufft/: CMakeLists.txt  backward.cpp  execute_helper.hpp  forward.cpp
src/dft/backends/mklcpu/: CMakeLists.txt
src/dft/backends/mklgpu/: CMakeLists.txt  backward.cpp  forward.cpp
src/dft/backends/portfft/: CMakeLists.txt
src/dft/backends/rocfft/: CMakeLists.txt  backward.cpp  execute_helper.hpp  forward.cpp
src/include/: function_table_initializer.hpp
src/lapack/: lapack_loader.cpp
src/lapack/backends/: CMakeLists.txt
src/lapack/backends/armpl/: CMakeLists.txt  armpl_batch.cpp  armpl_common.hpp  armpl_wrappers.cpp  armpl_wrappers_table_dyn.cpp
src/lapack/backends/cusolver/: CMakeLists.txt  cusolver_batch.cpp  cusolver_helper.hpp  cusolver_lapack.cpp  cusolver_scope_handle.cpp  cusolver_scope_handle.hpp  cusolver_task.hpp
src/lapack/backends/mklcpu/: CMakeLists.txt  mkl_lapack.cpp
src/lapack/backends/mklgpu/: CMakeLists.txt  mkl_lapack.cpp
src/lapack/backends/rocsolver/: CMakeLists.txt  rocsolver_batch.cpp  rocsolver_helper.hpp  rocsolver_lapack.cpp  rocsolver_scope_handle.cpp  rocsolver_scope_handle.hpp  rocsolver_task.hpp
src/rng/backends/: CMakeLists.txt
src/rng/backends/armpl/: CMakeLists.txt  armpl_common.hpp  armpl_rng_cpu_wrappers.cpp  mrg32k3a.cpp  philox4x32x10.cpp
src/rng/backends/curand/: CMakeLists.txt  curand_task.hpp
src/rng/backends/mklcpu/: CMakeLists.txt
src/rng/backends/mklgpu/: CMakeLists.txt
src/rng/backends/rocrand/: CMakeLists.txt  rocrand_task.hpp
src/sparse_blas/: sparse_blas_loader.cpp
src/sparse_blas/backends/: common_launch_task.hpp
src/sparse_blas/backends/cusparse/: CMakeLists.txt  cusparse_global_handle.hpp  cusparse_handles.cpp  cusparse_scope_handle.cpp  cusparse_scope_handle.hpp  cusparse_task.hpp
src/sparse_blas/backends/mkl_common/: mkl_handles.hpp
src/sparse_blas/backends/mklcpu/: CMakeLists.txt
src/sparse_blas/backends/mklgpu/: CMakeLists.txt
src/sparse_blas/backends/rocsparse/: CMakeLists.txt  rocsparse_error.hpp  rocsparse_global_handle.hpp  rocsparse_handles.cpp  rocsparse_handles.hpp  rocsparse_helper.hpp  rocsparse_scope_handle.cpp  rocsparse_scope_handle.hpp  rocsparse_task.hpp
tests/unit_tests/: CMakeLists.txt  main_test.cpp
tests/unit_tests/blas/include/: reference_blas_templates.hpp  reference_blas_wrappers.hpp
tests/unit_tests/blas/level1/: iamax.cpp  iamax_usm.cpp  iamin.cpp  iamin_usm.cpp
tests/unit_tests/dft/source/: compute_tests.cpp
tests/unit_tests/include/: test_helper.hpp
tests/unit_tests/rng/include/: rng_test_common.hpp
tests/unit_tests/sparse_blas/include/: test_common.hpp  test_spmm.hpp  test_spmv.hpp  test_spsv.hpp
tests/unit_tests/sparse_blas/source/: sparse_spmm_buffer.cpp  sparse_spmm_usm.cpp  sparse_spmv_buffer.cpp  sparse_spmv_usm.cpp  sparse_spsv_buffer.cpp  (+1 more)
(+34 files in other folders)
